Fix image template urls and padded header stopping overlap

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,13 +1,18 @@
 /* GLOBAL STYLES
 /* Bootstrap template CSS */
 /*-------------------------------------------------- */
+@import url('https://fonts.googleapis.com/css2?family=Work+Sans&display=swap');
 
 body {
-    /* padding-top: 3rem; */
+    padding-top: 5rem;
     padding-bottom: 3rem;
     color: #5a5a5a;
-    height: calc(100vh - 164px);
-    padding-top: 160px; 
+    font-family: Work Sans,sans-serif;
+    margin-top: 80px;
+}
+
+header {
+    padding-top: 100px;
 }
 
 footer {
@@ -59,6 +64,7 @@ footer p:last-child {
     left: 0;
     min-width: 100%;
     height: 32rem;
+    object-fit: cover;
 }
 
 /* Center align the text within the three columns below the carousel */
